check var count percentage and make decision

--- a/pre_var_selection.ipynb
+++ b/pre_var_selection.ipynb
@@ -26,29 +26,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# construct possible varnames for each Name Stem in its Construct group\n",
-    "# flag in [\"pre\", \"post\", 'd', 'w']\n",
-    "def build_counstruct_variable_dict(codebook, flag):\n",
-    "    appending = [c for c in list(codebook.columns)[1:list(codebook.columns).index(\"Construct\")]]\n",
-    "    if \"pre\" in appending:\n",
-    "        construct_var_dict = \\\n",
-    "            codebook.groupby(\"Construct\").apply(\n",
-    "                lambda d: {i: [a + \"_\" + i for a in appending if d[d[\"Name Stem\"] == i][a].tolist()[0] == \"x\"] \\\n",
-    "                           for i in d[\"Name Stem\"]}).to_dict()\n",
-    "            \n",
-    "    else:\n",
-    "        construct_var_dict = \\\n",
-    "            codebook.groupby(\"Construct\").apply(\n",
-    "                lambda d: {i: [i + flag + str(a) for a in appending if d[d[\"Name Stem\"] == i][a].tolist()[0] == \"x\"] \\\n",
-    "                           for i in d[\"Name Stem\"]}).to_dict()\n",
-    "    return construct_var_dict\n",
-    "\n",
     "# Verify possuble varnames by checking in bio class variables set\n",
     "def find_construct_variable(df, codebook, flag):\n",
+    "    \n",
+    "    # construct possible varnames for each Name Stem in its Construct group\n",
+    "    # flag in [\"pre\", \"post\", 'd', 'w']\n",
+    "    def build_counstruct_variable_dict(codebook, flag):\n",
+    "        appending = [c for c in list(codebook.columns)[1:list(codebook.columns).index(\"Construct\")]]\n",
+    "        if \"pre\" in appending:\n",
+    "            construct_var_dict = \\\n",
+    "                codebook.groupby(\"Construct\").apply(\n",
+    "                    lambda d: {i: [a + \"_\" + i for a in appending if d[d[\"Name Stem\"] == i][a].tolist()[0] == \"x\"] \\\n",
+    "                               for i in d[\"Name Stem\"]}).to_dict()\n",
+    "\n",
+    "        else:\n",
+    "            construct_var_dict = \\\n",
+    "                codebook.groupby(\"Construct\").apply(\n",
+    "                    lambda d: {i: [i + flag + str(a) for a in appending if d[d[\"Name Stem\"] == i][a].tolist()[0] == \"x\"] \\\n",
+    "                               for i in d[\"Name Stem\"]}).to_dict()\n",
+    "        return construct_var_dict\n",
+    "\n",
     "    construct_var_dict = build_counstruct_variable_dict(codebook, flag)\n",
     "    return {construct: {var_root: [var for var in construct_var_dict[construct][var_root] + [var_root] if var in df.columns] \\\n",
     "                          for var_root in construct_var_dict[construct]} for construct in construct_var_dict}\n",
@@ -59,23 +60,25 @@
     "        for var_root in to_ret[construct]:\n",
     "            if len(to_ret[construct][var_root]) == 0:\n",
     "                print([construct, var_root])\n",
-    "    print('\\n')\n",
-    "\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def build_var_null_percentage_df(df, sheet_name, verbal = False, overwrite = True, student_interested = False, \n",
     "                                 count_writer = None, describe_writer = None):\n",
     "    \n",
     "    def construct_percentage_df(construct_var_dict):\n",
-    "        df_percentage_master = pd.DataFrame()\n",
-    "        for construct in construct_var_dict:\n",
-    "            found_var = [var for var_root in construct_var_dict[construct] for var in construct_var_dict[construct][var_root]]\n",
-    "            df_construct_sub = df[found_var]\n",
-    "            to_view = pd.DataFrame(df_construct_sub.count()).reset_index()\n",
-    "            to_view.columns = [\"var\", \"count\"]\n",
-    "            to_view[\"Name Stem\"] = [var_root for var_root in construct_var_dict[construct] for var in construct_var_dict[construct][var_root]]\n",
-    "            to_view[\"Construct\"] = construct\n",
-    "            df_percentage_master = pd.concat([df_percentage_master, to_view], axis = 0)\n",
+    "        df_percentage_master = pd.DataFrame([[construct, name_stem, var] for construct in construct_var_dict \n",
+    "                                             for name_stem in construct_var_dict[construct] for var in construct_var_dict[construct][name_stem]])\n",
+    "        df_percentage_master.columns = [\"Construct\", \"Name Stem\", \"Var\"]\n",
+    "        df_percentage_master[\"count\"] = df[df_percentage_master[\"Var\"]].count().to_list()\n",
     "        df_percentage_master[\"flag\"] = [i.replace(j, '').replace('_', '') if i.replace(j, '').replace('_', '') else \"original\" \n",
-    "                       for i, j in zip(df_percentage_master[\"var\"], df_percentage_master[\"Name Stem\"])]\n",
+    "                       for i, j in zip(df_percentage_master[\"Var\"], df_percentage_master[\"Name Stem\"])]\n",
     "        df_percentage_master = pd.DataFrame(df_percentage_master.pivot(index='Name Stem', columns=\"flag\", values=[\"count\"]))\n",
     "        return df_percentage_master\n",
     "    \n",
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -22716,6 +22719,100 @@
     "        build_var_null_percentage_df(df, sheet_name, verbal = True, student_interested=False, \n",
     "                                     count_writer = count_writer, describe_writer = describe_writer)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Select Var based on count percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_decision_df(df, sheet_name, threshold = 0.5, writer = None):\n",
+    "    df_codebook =  pd.read_excel(\"data/codebook.xlsx\", sheet_name=sheet_name)\n",
+    "    construct_var_dict = find_construct_variable(df, df_codebook, sheet_name[0].lower())\n",
+    "    df_master = pd.DataFrame([[construct, name_stem, var] for construct in construct_var_dict \n",
+    "                              for name_stem in construct_var_dict[construct] for var in construct_var_dict[construct][name_stem]])\n",
+    "    df_master.columns = [\"Construct\", \"Name Stem\", \"Var\"]\n",
+    "    df_master[\"Percentage\"] = df[df_master[\"Var\"]].count().to_list()\n",
+    "    df_master[\"Percentage\"] /= df.shape[0]\n",
+    "    df_master[\"Decision\"] = [\"Keep\" if i >= threshold else \"Drop\" for i in df_master[\"Percentage\"]]\n",
+    "    \n",
+    "    if writer:\n",
+    "        df_master.to_excel(writer, sheet_name = sheet_name)\n",
+    "        for dec in [\"Keep\", \"Drop\"]:\n",
+    "            df_dec = df_master[df_master[\"Decision\"] == dec]\n",
+    "            df_dec.reset_index(drop=True).to_excel(writer, sheet_name = \"{} {}\".format(sheet_name, dec))\n",
+    "        df_temp = pd.DataFrame(df_master.groupby(\"Construct\").mean().reset_index())\n",
+    "        df_temp[\"Decision\"] = [\"Keep\" if i >= threshold else \"Drop\" for i in df_temp[\"Percentage\"]]\n",
+    "        df_temp.to_excel(writer, sheet_name = \"{} AGG Decision\".format(sheet_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"data/student_interested_var_decision.xlsx\"\n",
+    "with pd.ExcelWriter(fname) as decision_writer:\n",
+    "    for sheet_name in SHEET_NAMES:\n",
+    "        build_decision_df(df_interested, sheet_name, writer = decision_writer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
