added ML unsupervised clustering on activities

--- a/clustering/activities_lda_analysis.ipynb
+++ b/clustering/activities_lda_analysis.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/open_ended_responses.csv\")"
+    "df = pd.read_csv(\"../data/open_ended_responses.csv\")"
    ]
   },
   {
