--- a/preprocessing/pre_post_analysis.ipynb
+++ b/preprocessing/pre_post_analysis.ipynb
@@ -26,10 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/class_data.csv\")\n",
+    "df = pd.read_csv(\"../data/class_data.csv\")\n",
     "df_interested = df[df[\"pre_studyinterest\"] == \"Yes\"]\n",
-    "df_var_sel = pd.read_excel(\"data/student_interested_var_decision.xlsx\", sheet_name = None)\n",
-    "df_codebook = pd.read_excel(\"data/codebook.xlsx\", sheet_name = None)"
+    "df_var_sel = pd.read_excel(\"../data/student_interested_var_decision.xlsx\", sheet_name = None)\n",
+    "df_codebook = pd.read_excel(\"../data/codebook.xlsx\", sheet_name = None)"
    ]
   },
   {
@@ -7664,7 +7664,7 @@
     "temp.merge(df_codebook[\"Pre & Post\"][[\"Name Stem\", \"Item\", \"Label\", \"Response Values\", \"Construct\"]],\n",
     "                                        left_on = \"Name Stem\", right_on = \"Name Stem\").sort_values(\"Construct\")\\\n",
     "                                                                                      .reset_index(drop = True)\\\n",
-    "                                                                                      .to_csv(\"data/Pre_Post_Difference.csv\", index = False)"
+    "                                                                                      .to_csv(\"../data/Pre_Post_Difference.csv\", index = False)"
    ]
   },
   {
