--- a/preprocessing/pre_var_selection.ipynb
+++ b/preprocessing/pre_var_selection.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/class_data.csv\", encoding = 'latin-1')\n",
+    "df = pd.read_csv(\"../data/class_data.csv\", encoding = 'latin-1')\n",
     "df_interested = df[df[\"pre_studyinterest\"] == \"Yes\"]"
    ]
   },
@@ -112,7 +112,7 @@
     "            display(df_describe)\n",
     "        df_describe.to_excel(writer, sheet_name = sheet_name)\n",
     "    \n",
-    "    df_codebook =  pd.read_excel(\"data/codebook.xlsx\", sheet_name=sheet_name)\n",
+    "    df_codebook =  pd.read_excel(\"../data/codebook.xlsx\", sheet_name=sheet_name)\n",
     "    construct_var_dict = find_construct_variable(df, df_codebook, sheet_name[0].lower())\n",
     "    df_percentage = construct_percentage_df(construct_var_dict)\n",
     "    codebook_vars = [\"Name Stem\", \"Construct\", \"Item\", \"Response Values\", \"Label\"]\n",
@@ -151,8 +151,8 @@
     }
    ],
    "source": [
-    "fname_count = \"data/student_interested_var_count.xlsx\"\n",
-    "fname_describe = \"data/student_interested_var_describe.xlsx\"\n",
+    "fname_count = \"../data/student_interested_var_count.xlsx\"\n",
+    "fname_describe = \"../data/student_interested_var_describe.xlsx\"\n",
     "print(\"Total number of students:  \", df_interested.shape[0])\n",
     "with pd.ExcelWriter(fname_count) as count_writer, pd.ExcelWriter(fname_describe) as describe_writer:\n",
     "    for sheet_name in SHEET_NAMES:\n",
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"data/student_interested_var_decision.xlsx\"\n",
+    "fname = \"../data/student_interested_var_decision.xlsx\"\n",
     "with pd.ExcelWriter(fname) as decision_writer:\n",
     "    for sheet_name in SHEET_NAMES:\n",
     "        build_decision_df(df_interested, sheet_name, writer = decision_writer)"
