preprocess data & clean repo

--- a/clustering/activities_lda_analysis.ipynb
+++ b/clustering/activities_lda_analysis.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This notebook uses LDA (Latent Dirichlet Allocation) to check possible activity-related response topics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
