--- a/preprocessing/pre_post_analysis.ipynb
+++ b/preprocessing/pre_post_analysis.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This notebook checks the Pre-Post variables trend (difference in mean)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
