--- a/preprocessing/pre_var_selection.ipynb
+++ b/preprocessing/pre_var_selection.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This notebook does the followings:\n",
+    "- Get Descriptive Variable Statistics (Mean, Std, Min, Max)\n",
+    "- Conduct Naive Var Selection Based On NULL Percentage (50% is chosen here)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -134,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interested Students"
+    "### Interested Students"
    ]
   },
   {
@@ -164,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## All Students"
+    "### All Students"
    ]
   },
   {
@@ -186,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Select Var based on count percentage"
+    "### Select Var based on count percentage"
    ]
   },
   {
@@ -229,69 +238,6 @@
     "    for sheet_name in SHEET_NAMES:\n",
     "        build_decision_df(df_interested, sheet_name, writer = decision_writer)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
