standardized vars and predicted binary response

--- a/quiz_prediction/quiz_prediction_classification.ipynb
+++ b/quiz_prediction/quiz_prediction_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "#from ml_utlis import *\n",
     "# insert at 1, 0 is the script path (or '' in REPL)\n",
     "sys.path.insert(1, '/Users/CalebPitts/Documents/Files/School/College/19-20-Year/Research/DMOL/utils')\n",
-    "#from ml_utils import *\n",
+    "from ml_utils import *\n",
+    "import pickle\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -21,6 +22,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from sklearn import preprocessing\n",
     "from sklearn.linear_model import LinearRegression, Lasso\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -33,29 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'load_object' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-e56f60d7c8e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf_proc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Users/CalebPitts/Documents/Files/School/College/19-20-Year/Research/data/proc_df.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvar_map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_object\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Users/CalebPitts/Documents/Files/School/College/19-20-Year/Research/data/var_map.pkl\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'load_object' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_proc = pd.read_csv(\"/Users/CalebPitts/Documents/Files/School/College/19-20-Year/Research/data/proc_df.csv\")\n",
-    "var_map = load_object(\"/Users/CalebPitts/Documents/Files/School/College/19-20-Year/Research/data/var_map.pkl\")"
+    "var_map = pickle.load(open(\"/Users/CalebPitts/Documents/Files/School/College/19-20-Year/Research/data/var_map.pkl\", 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +54,7 @@
     "    def construct_X(df, var_map_curr, n_comp = None, verbose = False):\n",
     "        X = pd.DataFrame()\n",
     "        pca = PCA(n_components=n_comp) if n_comp is not None else None\n",
-    "        print(pca.components_)\n",
+    "        #print(pca.components_)\n",
     "        for construct in var_map_curr[\"Quant\"]:\n",
     "            temp = df[list(var_map_curr[\"Quant\"][construct])].copy()\n",
     "            temp = temp.fillna(temp.mode().iloc[0])\n",
@@ -85,12 +75,29 @@
     "    \n",
     "    var_map_curr = NEW_VAR_MAP[\"week_{}\".format(week_num)]\n",
     "    X, y = construct_X(df, var_map_curr, n_comp, verbose), df[\"gr_revq{}_quantile\".format(week_num)]\n",
+    "    \n",
     "    for gr in [\"gr_revq{}\".format(i) for i in range(max(1, week_num-1), week_num)]:\n",
     "        X[gr] = df[gr]\n",
     "    \n",
-    "    ### Classification Modeling ###\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
+    "    \n",
+    "    # Standardization\n",
+    "    X_vals = X.values #returns a numpy array\n",
+    "    min_max_scaler = preprocessing.MinMaxScaler()\n",
+    "    x_vals_scaled = min_max_scaler.fit_transform(X_vals)\n",
+    "    X = pd.DataFrame(x_vals_scaled)\n",
+    "    \n",
+    "    # Get bottom and top halves\n",
+    "    halves = []\n",
+    "    for val in y:\n",
+    "        if val in [1,2]:\n",
+    "            halves.append(1)\n",
+    "        else:\n",
+    "            halves.append(2)\n",
     "\n",
+    "    pd.Series(halves)\n",
+    "        \n",
+    "    ### Classification Modeling ###\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, halves, test_size = 0.2, random_state = 42)\n",
     "    \n",
     "    for n in range(5, 9):\n",
     "        print(\"\\nN Estimators:\", n)\n",
@@ -108,33 +115,126 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Week 1\n",
+      "\n",
+      "N Estimators: 5\n",
+      "Training Accuracy: 0.9113924050632911\n",
+      "Testing  Accuracy: 0.5\n",
+      "\n",
+      "N Estimators: 6\n",
+      "Training Accuracy: 0.9620253164556962\n",
+      "Testing  Accuracy: 0.7\n",
+      "\n",
+      "N Estimators: 7\n",
+      "Training Accuracy: 0.9873417721518988\n",
+      "Testing  Accuracy: 0.6\n",
+      "\n",
+      "N Estimators: 8\n",
+      "Training Accuracy: 1.0\n",
+      "Testing  Accuracy: 0.5\n",
+      "\n",
+      "\n",
+      "\n",
+      "Week 2\n",
+      "\n",
+      "N Estimators: 5\n",
+      "Training Accuracy: 0.9746835443037974\n",
+      "Testing  Accuracy: 0.7\n",
+      "\n",
+      "N Estimators: 6\n",
+      "Training Accuracy: 0.9240506329113924\n",
+      "Testing  Accuracy: 0.7\n",
+      "\n",
+      "N Estimators: 7\n",
+      "Training Accuracy: 0.9746835443037974\n",
+      "Testing  Accuracy: 0.65\n",
+      "\n",
+      "N Estimators: 8\n",
+      "Training Accuracy: 0.9746835443037974\n",
+      "Testing  Accuracy: 0.75\n",
+      "\n",
+      "\n",
+      "\n",
+      "Week 3\n",
+      "\n",
+      "N Estimators: 5\n",
+      "Training Accuracy: 0.8987341772151899\n",
+      "Testing  Accuracy: 0.5\n",
+      "\n",
+      "N Estimators: 6\n",
+      "Training Accuracy: 0.8987341772151899\n",
+      "Testing  Accuracy: 0.6\n",
+      "\n",
+      "N Estimators: 7\n",
+      "Training Accuracy: 0.9240506329113924\n",
+      "Testing  Accuracy: 0.65\n",
+      "\n",
+      "N Estimators: 8\n",
+      "Training Accuracy: 0.9240506329113924\n",
+      "Testing  Accuracy: 0.5\n",
+      "\n",
+      "\n",
+      "\n",
+      "Week 4\n",
+      "\n",
+      "N Estimators: 5\n",
+      "Training Accuracy: 0.9493670886075949\n",
+      "Testing  Accuracy: 0.65\n",
+      "\n",
+      "N Estimators: 6\n",
+      "Training Accuracy: 0.9367088607594937\n",
+      "Testing  Accuracy: 0.8\n",
+      "\n",
+      "N Estimators: 7\n",
+      "Training Accuracy: 0.9113924050632911\n",
+      "Testing  Accuracy: 0.55\n",
+      "\n",
+      "N Estimators: 8\n",
+      "Training Accuracy: 0.9493670886075949\n",
+      "Testing  Accuracy: 0.8\n",
+      "\n",
+      "\n",
+      "\n",
+      "Week 5\n",
+      "\n",
+      "N Estimators: 5\n",
+      "Training Accuracy: 0.8987341772151899\n",
+      "Testing  Accuracy: 0.65\n",
+      "\n",
+      "N Estimators: 6\n",
+      "Training Accuracy: 0.8734177215189873\n",
+      "Testing  Accuracy: 0.6\n",
+      "\n",
+      "N Estimators: 7\n",
+      "Training Accuracy: 0.9240506329113924\n",
+      "Testing  Accuracy: 0.6\n",
+      "\n",
+      "N Estimators: 8\n",
+      "Training Accuracy: 0.9113924050632911\n",
+      "Testing  Accuracy: 0.6\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for week_num in range(1, 6):\n",
     "    print(\"Week {}\".format(week_num))\n",
-    "    train_model(df_proc, week_num, use_fr = False, plot = False)\n",
+    "    X = train_model(df_proc, week_num, n_comp=1, use_fr = False, plot = False)\n",
     "    print('\\n\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
